# reseaux-dossier-noel

./: .gitignore
Step0/: VehiculesHV  admin  admin.c  data.h  log
Step1/: LibSerAG.c  VehiculesAG  admin  admin.c  data.h  makefile
Step2/: LibSerAG.c  admin.c  cli.c  data.h  makefile  requeteAG.h  ser.c
Step2/Libraries/: requeteAG.h
Step2/Libraries/udplib/: udplib.h
Step2/backup/: cli.c
Step3/: VehiculesAG  admin.c  cli.c  makefile  ser.c
Step3/Libraries/: LibSerAG.h  requeteAG.h
Step4A/: CMakeLists.txt  FacturesAG  VehiculesAG  cli.c  makefile  ser.c
Step4A/Libraries/: LibSerAG.c  LibSerAG.h  data.h  requeteAG.h
Step4B/: FacturesAG  README.md  VehiculesAG  admin  admin.c  cli  cli.c  ser  ser.c
Step4B/Libraries/: LibSerAG.c  requeteAG.h
Step4B/Libraries/udplib/: essai.c
Step5A/: cli.c  ser.c
Step5A/Libraries/: LibSerAG.h
Step5A/Libraries/udplib/: udplib.c
Step5B/: makefile
Step5B/Libraries/: LibSerAG.c
Step6/: admin.c  cli.c  ser.c
Step6/Libraries/: LibSerAG.c  LibSerAG.h  data.h
